# kubeatlas-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  test_delete_user.sh  test_user_deletion.sh
docker/postgres/initdb/: 01-create-db.sql  02-create-schemas.sql
docs/: api.md  frontend-interation.md  integration-mtls-agent-ru.md  integration-mtls-agent.md  keycloak.md  user-management-frontend.md
keycloak/: kubeatlas-realm.json
src/: auth.rs  config.rs  lib.rs  main.rs  middleware.rs
src/handlers/: auth_handler.rs  health_handler.rs  install_handler.rs  mod.rs  statistics_handler.rs  user_admin_handler.rs  user_handler.rs
src/models/: cluster.rs  controller.rs  mod.rs  response.rs  user.rs
src/services/: install_service.rs  mod.rs  token_service.rs
tests/: integration_tests.rs  test_auth.rs  test_config.rs  test_handlers.rs  test_models.rs  test_statistics_handler.rs
